--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
         <img src="img/Grey C logo.jpg" style="height: 150px;" />
-        <h4 class="hero-heading" style="color: white;">Conestoga Spiritware</h4>
+        <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
         <h5 style="color: white; margin: 0;">Contact us</h5>
         <a href="mailto:stogawear@gmail.com">stogawear@gmail.com</a>
     </div>
@@ -123,7 +123,7 @@
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
         <p>COVID-19 pickup of masks at end of September. Please check your PAYPAL  email.</p>
-        <p style="font-size:5px;"> This is not an official TESD website. It is organized by Conestoga parents<\p>
+        <p style="font-size: 10px;"> This is not an official TESD website. It is organized by Conestoga parents<\p>
     </center>
 
     <script>
