--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
         <p>COVID-19 pickup of masks at end of September. Please check your PAYPAL  email.</p>
-        <p style="font-size: 10px;"> This is not an official TESD website. It is organized by Conestoga parents<\p>
+        <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
     </center>
 
     <script>
