--- a/test.html
+++ b/test.html
@@ -64,13 +64,14 @@
 <body>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
-    <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
+    <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
+    <p style="color: white; margin-top: 0;">(all sales benefit CAPCO - ConestogA Parents Class Organization)</p>
     <h5 style="color: white; margin: 0;">Contact us</h5>
     <a href="mailto:stogawear@gmail.com">stogawear@gmail.com</a>
 </div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 13TH</b></h4>
-    <p>10% of proceeds to benefit T&E Cares. There will not be another round of sales.</p>
+    <p>10% of proceeds to benefit T/E Cares. There will not be another round of sales.</p>
     <h4>Products</h4>
     <div class="container">
         <div class="row">
@@ -95,6 +96,33 @@
                 <p>Dimensions: 3/4" W x 34" to 35" L.<br/>Made from double sided heavy weight satin material.</p>
             </div>
         </div>
+
+        <div class="row">
+            <div class="one-half column">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/Stoga T-shirt Gray Front.JPG" style="width: 250px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/Back.JPG" style="width: 250px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Gray T-Shirt</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-half column">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/White Front Upper Center all caps.jpg" style="width: 250px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/White Back.jpg" style="width: 250px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">White T-Shirt</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -113,7 +141,7 @@
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="2FPZFYN3SM3J4">
         <table>
-            <tr><td><input type="hidden" name="on0" value="Stogawear">Stogawear</td></tr><tr><td><select name="os0">
+            <tr><td><input type="hidden" name="on0" value="Masks/Lanyards">Masks/Lanyards</td></tr><tr><td><select name="os0">
             <option value="Masks - set of 2">Masks - set of 2 $15.00 USD</option>
             <option value="Lanyard/Facemask retainer">Lanyard/Facemask retainer $5.00 USD</option>
         </select> </td></tr>
@@ -122,6 +150,29 @@
         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
     </form>
+
+    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="GG6NNNZEEYVFA">
+        <table>
+            <tr><td><input type="hidden" name="on0" value="Conestoga T-shirts">Conestoga T-shirts</td></tr><tr><td><select name="os0">
+            <option value="Grey - S">Grey - S $15.00 USD</option>
+            <option value="Grey - M">Grey - M $15.00 USD</option>
+            <option value="Grey - L">Grey - L $15.00 USD</option>
+            <option value="Grey - XL">Grey - XL $15.00 USD</option>
+            <option value="Grey - XXL">Grey - XXL $15.00 USD</option>
+            <option value="White - S">White - S $15.00 USD</option>
+            <option value="White - M">White - M $15.00 USD</option>
+            <option value="White - L">White - L $15.00 USD</option>
+            <option value="White - XL">White - XL $15.00 USD</option>
+            <option value="White - XXL">White - XXL $15.00 USD</option>
+        </select> </td></tr>
+        </table>
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
+
     <p>COVID-19 pickup of masks at end of September. Please check your PAYPAL  email.</p>
     <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
 </center>
