--- a/test.html
+++ b/test.html
@@ -59,15 +59,15 @@
 </head>
 <body>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
+    <a href="mailto:stogawear@gmail.com" style="text-align: right">stogawear@gmail.com</a>
+    <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
     <p style="color: white; margin-top: 0;">(all sales benefit CAPCO - ConestogA Parents Class Organization)</p>
-    <h5 style="color: white; margin: 0;">Contact us</h5>
-    <a href="mailto:stogawear@gmail.com">stogawear@gmail.com</a>
 </div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 13TH</b></h4>
-    <p>10% of proceeds to benefit T/E Cares. While supplies last.</p>
+    <h5>10% of proceeds to benefit T/E Cares.</h5>
     <h4>Products</h4>
     <div class="container">
         <div class="row">
@@ -99,6 +99,7 @@
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                While supplies last.
             </div>
         </div>
         <hr>
@@ -106,7 +107,7 @@
             <div class="one-third column">
                 <div class="row">
                     <div class="one-half column">
-                        <img src="img/Stoga T-shirt Gray Front.JPG" style="width: 150px;" />
+                        <img src="img/Gray Stoga front.JPG" style="width: 150px;" />
                     </div>
                     <div class="one-half column">
                         <img src="img/Back.JPG" style="width: 150px;" />
@@ -114,7 +115,7 @@
                 </div>
                 <h5 style="margin: 0;">Gray T-Shirt</h5>
                 <p style="font-size: large">$15</p>
-                <p>Description here</p>
+                <p>4.5 oz., Grey 90% preshrunk ringspun cotton, 10% polyester</p>
             </div>
             <div class="one-third column">
                 <div class="row">
@@ -127,7 +128,7 @@
                 </div>
                 <h5 style="margin: 0;">White T-Shirt</h5>
                 <p style="font-size: large">$15</p>
-                <p>4.5 oz., White:100% preshrunk ringspun cotton and Grey  90% cotton, 10% polyester</p>
+                <p>4.5 oz., White:100% preshrunk ringspun cotton</p>
             </div>
             <div class="one-third column">
                 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -165,7 +166,8 @@
 </div>
 
 <center>
-    <p>We will be doing a COVID-safe pickup.  Stay tuned for further instructions to your Paypal email.<br/>All sales are final.  There are no exchanges or refunds.</p>
+    <p>We will be doing a COVID-safe pickup.  Stay tuned for further instructions to your Paypal email.</p>
+    <h4>All sales are final.  There are no exchanges or refunds.</h4>
     <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
 </center>
 
