--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
 </head>
 <body>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
-    <a href="mailto:stogawear@gmail.com" style="text-align: right">stogawear@gmail.com</a>
+    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 8px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
