--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@
 </div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 13TH</b></h4>
-    <h5>10% of proceeds to benefit T/E Cares.</h5>
+    <h5>10% of proceeds to benefit T&E Cares.</h5>
     <h4>Products</h4>
     <div class="container">
         <div class="row">
