--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
-    <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
+    <h4 class="hero-heading" style="color: white;">Conetosga Spiritwear</h4>
     <h5 style="color: white; margin: 0;">Contact us</h5>
     <a href="mailto:stogawear@gmail.com">stogawear@gmail.com</a>
 </div>
