--- a/test.html
+++ b/test.html
@@ -62,7 +62,7 @@
     <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 8px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
-    <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
+    <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conetosga Spiritwear</h4>
     <p style="color: white; margin-top: 0;">(all sales benefit CAPCO - ConestogA Parents Class Organization)</p>
 </div>
 <div class="section" style="padding-top: 6rem;">
