--- a/test.html
+++ b/test.html
@@ -55,6 +55,10 @@
             text-decoration: none;
             cursor: pointer;
         }
+
+        img:hover {
+            transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+        }
     </style>
 </head>
 <body>
@@ -113,7 +117,7 @@
                         <img src="img/Back.JPG" style="width: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Gray T-Shirt</h5>
+                <h5 style="margin: 0;">Grey T-Shirt</h5>
                 <p style="font-size: large">$15</p>
                 <p>4.5 oz., Grey 90% preshrunk ringspun cotton, 10% polyester</p>
             </div>
