--- a/index.html
+++ b/index.html
@@ -56,43 +56,106 @@
             cursor: pointer;
         }
 
-        .hero {
-
+        img:hover {
+            transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
         }
     </style>
 </head>
 <body>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
+    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 8px;right: 16px;">stogawear@gmail.com</a>
+    <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
-    <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
-    <h5 style="color: white; margin: 0;">Contact us</h5>
-    <a href="mailto:stogawear@gmail.com">stogawear@gmail.com</a>
+    <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
+    <p style="color: white; margin-top: 0;">(all sales benefit CAPCO - ConestogA Parents Class Organization)</p>
 </div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 20TH</b></h4>
-    <p>10% of proceeds to benefit T&E Cares. There will not be another round of sales.</p>
+    <h5>10% of proceeds to benefit T&E Cares.</h5>
     <h4>Products</h4>
     <div class="container">
         <div class="row">
-            <div class="one-half column">
-                <div class="row">
-                    <div class="one-half column">
-                        <img src="img/0003%20grey%20mask.jpg" style="width: 250px;"/>
-                    </div>
-                    <div class="one-half column">
-                        <img src="img/0003%20maroon%20mask.jpg" style="width: 250px;"/>
-                    </div>
-                </div>
+            <div class="one-third column">
+                <img src="img/0003%20grey%20mask.jpg" style="width: 250px;"/>
+                <img src="img/0003%20maroon%20mask.jpg" style="width: 250px;"/>
                 <h5 style="margin: 0;">Conestoga Masks</h5>
                 <p style="font-size: large">Set of 2 - $15</p>
                 <p>Dimensions: 7" x 5"<br/>Made with 2 layers of black cotton with one outer layer of polyester</p>
             </div>
-            <div class="one-half column">
+            <div class="one-third column">
                 <img id="myBtn" src="img/maroon lanyard - cropped.jpg" style="height: 150px;" />
                 <br/>🔍 Click image to zoom
                 <h5 style="margin: 0;">Lanyard/Facemask retainers <br/>with bulldog clips</h5>
                 <p style="font-size: large">$5</p>
                 <p>Dimensions: 3/4" W x 34" to 35" L.<br/>Made from double sided heavy weight satin material.</p>
+            </div>
+            <div class="one-third column">
+                <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="2FPZFYN3SM3J4">
+                    <table>
+                        <tr><td><input type="hidden" name="on0" value="Masks/Lanyards">Masks/Lanyards</td></tr><tr><td><select name="os0">
+                        <option value="Masks - set of 2">Masks - set of 2 $15.00 USD</option>
+                        <option value="Lanyard/Facemask retainer">Lanyard/Facemask retainer $5.00 USD</option>
+                    </select> </td></tr>
+                    </table>
+                    <input type="hidden" name="currency_code" value="USD">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+                While supplies last.
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="one-third column">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/Gray Stoga front.JPG" style="width: 150px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/Back.JPG" style="width: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Grey T-Shirt</h5>
+                <p style="font-size: large">$15</p>
+                <p>4.5 oz., Grey 90% preshrunk ringspun cotton, 10% polyester</p>
+            </div>
+            <div class="one-third column">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/White Front Upper Center all caps.jpg" style="width: 150px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/White Back.jpg" style="width: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">White T-Shirt</h5>
+                <p style="font-size: large">$15</p>
+                <p>4.5 oz., White:100% preshrunk ringspun cotton</p>
+            </div>
+            <div class="one-third column">
+                <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="GG6NNNZEEYVFA">
+                    <table>
+                        <tr><td><input type="hidden" name="on0" value="Conestoga T-shirts">Conestoga T-shirts</td></tr><tr><td><select name="os0">
+                        <option value="Grey - S">Grey - S $15.00 USD</option>
+                        <option value="Grey - M">Grey - M $15.00 USD</option>
+                        <option value="Grey - L">Grey - L $15.00 USD</option>
+                        <option value="Grey - XL">Grey - XL $15.00 USD</option>
+                        <option value="Grey - XXL">Grey - XXL $15.00 USD</option>
+                        <option value="White - S">White - S $15.00 USD</option>
+                        <option value="White - M">White - M $15.00 USD</option>
+                        <option value="White - L">White - L $15.00 USD</option>
+                        <option value="White - XL">White - XL $15.00 USD</option>
+                        <option value="White - XXL">White - XXL $15.00 USD</option>
+                    </select> </td></tr>
+                    </table>
+                    <input type="hidden" name="currency_code" value="USD">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
             </div>
         </div>
     </div>
@@ -107,22 +170,8 @@
 </div>
 
 <center>
-    <h4>Purchase</h4>
-
-    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="2FPZFYN3SM3J4">
-        <table>
-            <tr><td><input type="hidden" name="on0" value="Stogawear">Stogawear</td></tr><tr><td><select name="os0">
-            <option value="Masks - set of 2">Masks - set of 2 $15.00 USD</option>
-            <option value="Lanyard/Facemask retainer">Lanyard/Facemask retainer $5.00 USD</option>
-        </select> </td></tr>
-        </table>
-        <input type="hidden" name="currency_code" value="USD">
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-    </form>
-    <p>COVID-19 pickup of masks at end of September. Please check your PAYPAL  email.</p>
+    <p>We will be doing a COVID-safe pickup.  Stay tuned for further instructions to your Paypal email.</p>
+    <h4>All sales are final.  There are no exchanges or refunds.</h4>
     <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
 </center>
 
