--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 20TH</b></h4>
-    <h5>10% of proceeds to benefit T&E Cares.</h5>
+    <h5>10% of proceeds to benefit T&E Care.</h5>
     <h4>Products</h4>
     <div class="container">
         <div class="row">
