--- a/index.html
+++ b/index.html
@@ -59,11 +59,29 @@
         img:hover {
             transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
         }
+
+        .banner {
+            background: black;
+            color: white;
+            height: 45px;
+            position: relative;
+        }
+
+        .banner-text {
+            text-align: center;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
     </style>
 </head>
 <body>
+<div class="banner"><p class="banner-text">Please check back as we are always adding new and exciting products!</p></div>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
-    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 8px;right: 16px;">stogawear@gmail.com</a>
+    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 50px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
@@ -98,11 +116,13 @@
                         <option value="Masks - set of 2">Masks - set of 2 $15.00 USD</option>
                         <option value="Lanyard/Facemask retainer">Lanyard/Facemask retainer $5.00 USD</option>
                     </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Contact Phone Number">Contact Phone Number</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                Please enter your contact phone number upon checkout.
                 While supplies last.
             </div>
         </div>
@@ -151,11 +171,13 @@
                         <option value="White - XL">White - XL $15.00 USD</option>
                         <option value="White - XXL">White - XXL $15.00 USD</option>
                     </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Contact Phone Number">Contact Phone Number</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                Please enter your contact phone number upon checkout.
             </div>
         </div>
     </div>
