--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                Please enter your contact phone number upon checkout.
-                While supplies last.
+                Please enter your contact phone number upon checkout.<br/>
+                <b>While supplies last.</b>
             </div>
         </div>
         <hr>
