while supplies last

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .banner {
             background: black;
             color: white;
-            height: 45px;
+            height: 60px;
             position: relative;
         }
 
@@ -75,13 +75,14 @@
             left: 50%;
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+            font-size: 15pt;
         }
     </style>
 </head>
 <body>
-<div class="banner"><p class="banner-text">Please check back as we are always adding new and exciting products!</p></div>
+<div class="banner"><p class="banner-text">👉 Please check back as we are always adding new and exciting products! 👈</p></div>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
-    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 50px;right: 16px;">stogawear@gmail.com</a>
+    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 60px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
@@ -123,7 +124,7 @@
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
                 Please enter your contact phone number upon checkout.<br/>
-                <b>While supplies last.</b>
+                <b>WHILE SUPPLIES LAST.</b>
             </div>
         </div>
         <hr>
