--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .banner {
             background: black;
             color: white;
-            height: 60px;
+            height: 100px;
             position: relative;
         }
 
@@ -75,19 +75,19 @@
             left: 50%;
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-            font-size: 15pt;
+            font-size: 18pt;
         }
     </style>
 </head>
 <body>
-<div class="banner"><p class="banner-text">👉 Please check back as we are always adding new and exciting products! 👈</p></div>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
-    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 60px;right: 16px;">stogawear@gmail.com</a>
+    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 16px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
     <p style="color: white; margin-top: 0;">(all sales benefit CAPCO - ConestogA Parents Class Organization)</p>
 </div>
+<div class="banner"><p class="banner-text">👉 Please check back as we are always<br> adding new and exciting products! 👈</p></div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 20TH</b></h4>
     <h5>10% of proceeds to benefit T&E Care</h5>
