--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <p>Dimensions: 3/4" W x 34" to 35" L.<br/>Made from double sided heavy weight satin material.</p>
             </div>
             <div class="one-third column">
+
                 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="2FPZFYN3SM3J4">
@@ -117,13 +118,13 @@
                         <option value="Masks - set of 2">Masks - set of 2 $15.00 USD</option>
                         <option value="Lanyard/Facemask retainer">Lanyard/Facemask retainer $5.00 USD</option>
                     </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Contact Phone Number">Contact Phone Number</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email address">Email address</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                Please enter your contact phone number upon checkout.<br/>
+                Please enter your contact email address upon checkout.<br/>
                 <b>WHILE SUPPLIES LAST.</b>
             </div>
         </div>
@@ -172,13 +173,13 @@
                         <option value="White - XL">White - XL $15.00 USD</option>
                         <option value="White - XXL">White - XXL $15.00 USD</option>
                     </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Contact Phone Number">Contact Phone Number</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email address">Email address</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                Please enter your contact phone number upon checkout.
+                Please enter your contact email address upon checkout.
             </div>
         </div>
     </div>
