--- a/test.html
+++ b/test.html
@@ -59,19 +59,38 @@
         img:hover {
             transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
         }
+
+        .banner {
+            background: black;
+            color: white;
+            height: 100px;
+            position: relative;
+        }
+
+        .banner-text {
+            text-align: center;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            font-size: 18pt;
+        }
     </style>
 </head>
 <body>
 <div class="section hero" style="background: #800000; padding-bottom: 1rem;">
-    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 8px;right: 16px;">stogawear@gmail.com</a>
+    <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 16px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
     <p style="color: white; margin-top: 0;">(all sales benefit CAPCO - ConestogA Parents Class Organization)</p>
 </div>
+<div class="banner"><p class="banner-text">👉 Please check back as we are always<br> adding new and exciting products! 👈</p></div>
 <div class="section" style="padding-top: 6rem;">
     <h4><b>SALE ENDS SUNDAY, SEPTEMBER 20TH</b></h4>
-    <h5>10% of proceeds to benefit T&E Cares.</h5>
+    <h5>10% of proceeds to benefit T&E Care</h5>
     <h4>Products</h4>
     <div class="container">
         <div class="row">
@@ -90,6 +109,7 @@
                 <p>Dimensions: 3/4" W x 34" to 35" L.<br/>Made from double sided heavy weight satin material.</p>
             </div>
             <div class="one-third column">
+
                 <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="2FPZFYN3SM3J4">
@@ -98,12 +118,14 @@
                         <option value="Masks - set of 2">Masks - set of 2 $15.00 USD</option>
                         <option value="Lanyard/Facemask retainer">Lanyard/Facemask retainer $5.00 USD</option>
                     </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email address">Email address</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                While supplies last.
+                Please enter your contact email address upon checkout.<br/>
+                <b>WHILE SUPPLIES LAST.</b>
             </div>
         </div>
         <hr>
@@ -151,11 +173,67 @@
                         <option value="White - XL">White - XL $15.00 USD</option>
                         <option value="White - XXL">White - XXL $15.00 USD</option>
                     </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email address">Email address</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                Please enter your contact email address upon checkout.
+            </div>
+        </div>
+    </div>
+    <hr>
+    <h5>Stoga that we will be selling until it runs out.</h5>
+    <div class="container">
+        <div class="row">
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">UA Sweatshirt - XL</h5>
+                <p style="font-size: large">$45</p>
+            </div>
+            <div class="one-third column">
+            </div>
+            <div class="one-third column">
+                <div class="row"><img src="img/UA XL Sweat.jpg" style="width: 250px;" /></div>
+                Todo: replace with tote image.
+                <h5 style="margin: 0;">Tote</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="WDVBW75XUKYN8">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="U2W29HVJ4PUB6">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
             </div>
         </div>
     </div>
