--- a/test.html
+++ b/test.html
@@ -184,7 +184,7 @@
         </div>
     </div>
     <hr>
-    <h5>Stoga that we will be selling until it runs out.</h5>
+    <h5>Conestoga products that we will be selling until it runs out.</h5>
     <div class="container">
         <div class="row">
             <div class="one-third column">
